# GBEmulator

./: CMakeLists.txt  README.md
include/: cpu.h  memory.h
src/: main.c
